--- a/src/BaroquenMelody.App.Components/Shared/CompositionRuleConfigurationCard.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CompositionRuleConfigurationCard.razor
@@ -1,6 +1,6 @@
 ﻿@inherits Fluxor.Blazor.Web.Components.FluxorComponent
 
-<MudCard Class="rounded mb-3 mx-3" Elevation="3" Outlined="true">
+<MudCard Class="rounded my-2 mx-2 mud-elevation-4" Elevation="ThemeProvider.Elevation" Outlined="true">
     <CardHeaderSwitch HeaderText="@(CompositionRule.ToSpaceSeparatedString())"
                       ConfigurationStatus="@Status"
                       ValueChanged="HandleIsEnabledChange"/>
@@ -27,7 +27,7 @@
                            ValueChanged="HandleStrictnessChange"
                            Size="Size.Medium"
                            Variant="Variant.Filled"
-                           Color="Color.Tertiary"
+                           Color="@(!Status.IsEnabled() ? Color.Dark : Color.Tertiary)"
                            ValueLabel="true"
                            TickMarks="true"
                            Immediate="true"
