--- a/src/BaroquenMelody.App.Components/Shared/RandomizeResetButtonGroup.razor
+++ b/src/BaroquenMelody.App.Components/Shared/RandomizeResetButtonGroup.razor
@@ -1,5 +1,5 @@
-﻿<MudGrid Class="my-3" Justify="Justify.FlexStart">
-    <MudItem Class="ml-3">
+﻿<MudGrid Class="mt-2" Justify="Justify.FlexStart" >
+    <MudItem Class="ml-2">
         <MudButton
             Variant="Variant.Filled"
             StartIcon="@RandomizeIcon"
