--- a/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
+++ b/src/BaroquenMelody.App.Components/Layout/MainLayout.razor
@@ -11,8 +11,8 @@
     MaxWidth="MaxWidth.Small"/>
 
 <MudLayout>
-    <MudAppBar Elevation="3" Dense="true" Gutters="false">
-        <MudIconButton Class="ml-3" Icon="@Icons.Material.Sharp.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@(_ => _isDrawerOpen = !_isDrawerOpen)"/>
+    <MudAppBar Class="mud-elevation-4" Elevation="ThemeProvider.Elevation" Dense="true" Gutters="false">
+        <MudIconButton Class="ml-2" Icon="@Icons.Material.Sharp.Menu" Color="Color.Inherit" Edge="Edge.Start" OnClick="@(_ => _isDrawerOpen = !_isDrawerOpen)"/>
         <MudSpacer/>
         <MudTooltip Delay="@ThemeProvider.TooltipDelay" Duration="@ThemeProvider.TooltipDuration" Text="source code">
             <MudIconButton Icon="@Icons.Custom.Brands.GitHub" Color="Color.Inherit" Href="https://www.github.com/wbaldoumas/baroquen-melody"/>
@@ -22,7 +22,7 @@
         </MudTooltip>
         <MudTooltip Delay="@ThemeProvider.TooltipDelay" Duration="@ThemeProvider.TooltipDuration" Text="more options" Placement="Placement.Left">
             <MudMenu Icon="@Icons.Material.Sharp.MoreVert"
-                     Class="mr-3"
+                     Class="mr-2"
                      AriaLabel="more options">
                 <MudMenuItem Icon="@Icons.Material.Sharp.Lightbulb" IconColor="Color.Warning" Href="https://github.com/wbaldoumas/baroquen-melody/issues/new?template=FEATURE_REQUEST.md">Feature request</MudMenuItem>
                 <MudMenuItem Icon="@Icons.Material.Sharp.BugReport" IconColor="Color.Tertiary" Href="https://github.com/wbaldoumas/baroquen-melody/issues/new?template=BUG_REPORT.md">Report a bug</MudMenuItem>
@@ -31,7 +31,7 @@
             </MudMenu>
         </MudTooltip>
     </MudAppBar>
-    <MudDrawer @bind-Open="_isDrawerOpen" ClipMode="DrawerClipMode.Never" Variant="DrawerVariant.Temporary" Overlay="true" Elevation="3">
+    <MudDrawer @bind-Open="_isDrawerOpen" ClipMode="DrawerClipMode.Never" Variant="DrawerVariant.Temporary" Class="mud-elevation-4" Overlay="true" Elevation="ThemeProvider.Elevation">
         <MudDrawerHeader Dense="true">
             <MudText Color="Color.Tertiary" Typo="Typo.h6">Baroquen Melody</MudText>
         </MudDrawerHeader>
