--- a/src/BaroquenMelody.App.Components/Shared/CompositionProgress.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CompositionProgress.razor
@@ -2,7 +2,7 @@
 
 @if (CompositionProgressState.Value.IsWaiting)
 {
-    <MudGrid Class="my-3" Justify="Justify.Center">
+    <MudGrid Class="my-2" Justify="Justify.Center">
         <MudAnimate
             Selector=".compose-button"
             Duration="2"
@@ -24,7 +24,7 @@
                             Delay="ThemeProvider.TooltipDelay"
                             Duration="ThemeProvider.TooltipDuration"
                             Disabled="@InstrumentConfigurationState.Value.IsValid">
-                    <MudButton Class="compose-button d-flex align-center justify-center"
+                    <MudButton Class="compose-button d-flex align-center justify-center mud-elevation-4"
                                Variant="Variant.Filled"
                                StartIcon="@Icons.Material.Filled.ElectricBolt"
                                Color="Color.Tertiary"
@@ -40,7 +40,7 @@
 }
 else if (CompositionProgressState.Value.IsFailed)
 {
-    <MudGrid Class="my-3" Justify="Justify.Center">
+    <MudGrid Class="my-2" Justify="Justify.Center">
         <MudAnimate 
             Selector=".composition-failed"
             Duration="2"
@@ -58,8 +58,9 @@ else if (CompositionProgressState.Value.IsFailed)
         <MudItem xs="12" sm="12" md="12" lg="12" xl="12" xxl="12">
             <div class="d-flex flex-shrink align-center justify-center ma-0" style="height:300px;">
                 <MudAlert Severity="Severity.Error"
-                          Class="composition-failed"
+                          Class="composition-failed mud-elevation-4"
                           Variant="Variant.Outlined"
+                          Elevation="ThemeProvider.Elevation"
                           ShowCloseIcon="true"
                           CloseIconClicked="() => Dispatcher.Dispatch(new ResetCompositionProgress())">
                     Failed to compose. Try again, or try a different configuration.
@@ -70,7 +71,7 @@ else if (CompositionProgressState.Value.IsFailed)
 }
 else
 {
-    <MudCard Class="rounded my-3 mx-3 px-4 py-4" Elevation="3" Outlined="true">
+    <MudCard Class="rounded my-2 mx-2 px-4 py-4 mud-elevation-4" Elevation="ThemeProvider.Elevation" Outlined="true">
         <MudGrid Justify="Justify.Center">
             <MudItem xs="12" sm="12" md="12" lg="12" xl="12" xxl="12">
                 <MudText Typo="Typo.h6">@CompositionProgressState.Value.Message</MudText>
