--- a/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationCard.razor
+++ b/src/BaroquenMelody.App.Components/Shared/OrnamentationConfigurationCard.razor
@@ -1,6 +1,6 @@
 ﻿@inherits Fluxor.Blazor.Web.Components.FluxorComponent
 
-<MudCard Class="rounded mb-3 mx-3" Elevation="3" Outlined="true">
+<MudCard Class="rounded my-2 mx-2 mud-elevation-4" Elevation="ThemeProvider.Elevation" Outlined="true">
     <CardHeaderSwitch HeaderText="@(OrnamentationType.ToSpaceSeparatedString())"
                       ConfigurationStatus="Status"
                       ValueChanged="HandleIsEnabledChange"/>
@@ -19,7 +19,7 @@
                     </PopoverContent>
                 </NumericInputWithPopover>
             </MudItem>
-            <MudFlexBreak/>
+            <MudFlexBreak />
             <MudItem xs="12" sm="12" md="12" lg="12" xl="12" xxl="12" Class="d-none d-sm-flex">
                 <MudSlider T="int"
                            Value="@Probability"
@@ -27,7 +27,7 @@
                            ValueChanged="HandleProbabilityChange"
                            Size="Size.Medium"
                            Variant="Variant.Filled"
-                           Color="Color.Tertiary"
+                           Color="@(!Status.IsEnabled() ? Color.Dark : Color.Tertiary)"
                            ValueLabel="true"
                            TickMarks="true"
                            Immediate="true"
