Lock 'enabled' Switch

--- a/src/BaroquenMelody.App.Components/Shared/CardHeaderSwitch.razor
+++ b/src/BaroquenMelody.App.Components/Shared/CardHeaderSwitch.razor
@@ -13,6 +13,7 @@
                                    Color="Color.Tertiary"
                                    LabelPosition="LabelPosition.Start"
                                    ThumbIcon="@IsEnabledIcon"
+                                   Disabled="IsLocked"
                                    ThumbIconColor="Color.Dark"
                                    ValueChanged="IsEnabledChanged"/>
                         <MudSwitch T="bool"
@@ -33,6 +34,7 @@
                                    Color="Color.Tertiary"
                                    LabelPosition="LabelPosition.Start"
                                    ThumbIconColor="Color.Dark"
+                                   Disabled="IsLocked"
                                    ThumbIcon="@IsEnabledIcon"
                                    ValueChanged="IsEnabledChanged"/>
                         <MudSwitch T="bool"
